# embeddedMath

./: .cproject  .gitignore  .project  CMakeLists.txt  readme.md
src/: README  random.cpp  random.h  randomAlarmingClock.cpp  randomAlarmingClock.h  timeMath.cpp  timeMath.h  types.h
